--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Homework 8</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/style/style.css" />
 </head>
 
 <body>
@@ -23,7 +23,6 @@
         <div class="lightbox__content">
             <img class="lightbox__image" src="" alt="" />
         </div>
-
         <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
 
