--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     -->
     <div class="lightbox js-lightbox">
         <div class="lightbox__overlay"></div>
+        <button type="button" class="lightbox__arrow lightbox__arrow-left" data-action="change-image" data-type="next">
+            < </button>
+                <button type="button" class="lightbox__arrow lightbox__arrow-right" data-action="change-image"
+                    data-type="back">
+                    > </button>
 
-        <div class="lightbox__content">
-            <img class="lightbox__image" src="" alt="" />
-        </div>
-        <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+                <div class="lightbox__content">
+                    <img class="lightbox__image" src="" alt="" />
+                </div>
+                <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
 
     <script src="app.js" type="module"></script>
