--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
     <div class="lightbox js-lightbox">
         <div class="lightbox__overlay"></div>
         <button type="button" class="lightbox__arrow lightbox__arrow-left" data-action="change-image" data-type="next">
-            < </button>
-                <button type="button" class="lightbox__arrow lightbox__arrow-right" data-action="change-image"
-                    data-type="back">
-                    > </button>
+            👈 </button>
+        <button type="button" class="lightbox__arrow lightbox__arrow-right" data-action="change-image" data-type="back">
+            👉 </button>
 
-                <div class="lightbox__content">
-                    <img class="lightbox__image" src="" alt="" />
-                </div>
-                <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+        <div class="lightbox__content">
+            <img class="lightbox__image" src="" alt="" />
+        </div>
+        <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/lodash/4.10.0/lodash.js"></script>
     <script src="app.js" type="module"></script>
 </body>
 
